# msur-gs

./: README.md  pyproject.toml
docs/: state_diagram.puml
src/: main.py
